<resources>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="app_name">FitnessApp</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="register_here">Don\'t have an account? Register here</string>
    <string name="login_here">Already have an account? Login here</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="welcome">Welcome Back \nLogin Here</string>
    <string name="register">Welcome!\nRegister Here</string>
    <string name="error_empty_email">Email is empty</string>
    <string name="error_empty_password">Password is empty</string>
    <string name="image_description">register_image</string>
    <string name="Add">Add Fitness</string>
    <string name="add_fitness">Add fitness Activities</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="duration">Duration</string>
    <string name="weight">Weight</string>
    <string name="calories">Calories Burned</string>
    <string name="end_date">Enter Date (dd-mm-yyyy)</string>
    <string name="note">Description</string>
    <string name="add_details">Add Details</string>
    <string name="user_name">Full Name</string>
    <string name="mail_subheader_title">Menu</string>
    <string name="inbox_title">Home</string>
    <string name="favourites_title">Favourites</string>
    <string name="outbox_title">Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="subtitle">Subtitle</string>
    <string name="sign_out">Sign Out</string>
    <string name="header_title">John Doe</string>
    <string name="header_text">johndoe@mail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Home</string>
    <string name="hello_profile_fragment">Profile</string>
    <string name="exercise_name_label">Exercise Name: %1$s</string>
    <string name="duration_label">Duration: %1$s</string>
    <string name="weight_label">Weight: %1$s kg</string>
    <string name="calories_label">Calories: %1$s kcal</string>
    <string name="end_date_label">End Date: %1$s</string>
    <string name="note_label">Note: %1$s</string>
    <string name="time_label">Time Stamp: %1$s</string>
    <string name="button_del">Delete</string>
    <string name="update_details">Update Details</string>
    <string name="update_fitness">Update Fitness Activity</string>
    <string name="delete_activity">Delete</string>
    <string name="email">example@mail.com</string>
    <string name="username">Username</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="default_web_client_id">default web client id</string>
    <string name="user_image">User Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="age">Age: </string>
    <string name="address">Address: </string>
    <string name="profession">Profession: </string>
    <string name="save_details">Save Details</string>
    <string name="profileName">Name: </string>
    <string name="profileEmail">Profile Email: </string>
    <string name="image_upload">image upload</string>
    <string name="upload_image_i">Upload Image</string>
</resources>