<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/main_item"
            android:title="@string/mail_subheader_title"
            android:icon="@drawable/ic_mail_outline_24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1">
            <menu>
                <item
                    android:id="@+id/navHome"
                    android:icon="@drawable/ic_inbox_24"
                    android:title="@string/inbox_title"
                    android:checkable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
                <item
                    android:id="@+id/navProfile"
                    android:icon="@drawable/ic_outbox_24px"
                    android:title="@string/outbox_title"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="@string/subtitle">
            <menu>
                <item
                    android:id="@+id/btnLogout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/sign_out" />

            </menu>
        </item>
    </group>

</menu>