<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.AddUserDetailsActivity">


    <ImageView
        android:id="@+id/imageViewUserImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/user_image"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        app:layout_constraintTop_toBottomOf="@id/imageViewUserImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="381dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/profileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUploadImage" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="383dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:text="@string/profileEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUsername" />

    <TextView
        android:id="@+id/textViewUserAge"
        android:layout_width="377dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

    <TextView
        android:id="@+id/textViewUserAddress"
        android:layout_width="374dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUserAge" />

    <TextView
        android:id="@+id/textViewUserProfession"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/profession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUserAddress" />

    <Button
        android:id="@+id/btnSaveDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_details"
        app:layout_constraintTop_toBottomOf="@id/textViewUserProfession"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
