<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.AddUserDetailsActivity">



    <EditText
        android:id="@+id/editTextUserAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="20"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextUserAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextUserAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextUserProfession"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/profession"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextUserAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSaveDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_details"
        app:layout_constraintTop_toBottomOf="@id/editTextUserProfession"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
